# iPaint

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: Display.hpp  Font.hpp  Network.cpp  Network.hpp  Sprite.hpp  main.cpp
src/glad/: glad.c  glad.h
